[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10.3"
rand = "0.9.2"
x25519-dalek = "2.0.1"
hkdf = "0.12.4"
sha2 = "0.10.9"
base64 = "0.22.1"
chacha20poly1305 = { version = "0.10.1", features=["alloc"] }
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
log = "0.4.28"
env_logger = "0.11.8"

# For rustls TLS client
rustls = "0.23.32"
tokio-rustls = "0.26.4"

# Persistence and auth

bcrypt = "0.14.0"
sled = "0.34.6"
argon2 = "0.5.3"

# Terminal progress
indicatif = "0.17.5"
hex = "0.4.3"
rcgen = "0.9.1"
rustls-pemfile = "1.0.1"
ed25519-dalek = { version = "1.0.1", features = ["std"] }
